# introduction-to-python

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
tutorials/: python-programming-1.qmd  python-programming-2.qmd  python-programming-3.qmd
tutorials/input/: V-Dem-CY-Full+Others-v10.csv  filtered_subset.csv
tutorials/input/freedom_house/: internet_freedoms_2020.csv
tutorials/input/russian-troll-tweets/: IRAhandle_tweets_1.csv  IRAhandle_tweets_10.csv  IRAhandle_tweets_11.csv  IRAhandle_tweets_12.csv  IRAhandle_tweets_13.csv  IRAhandle_tweets_2.csv  IRAhandle_tweets_3.csv  IRAhandle_tweets_4.csv  IRAhandle_tweets_5.csv  IRAhandle_tweets_6.csv  IRAhandle_tweets_7.csv  IRAhandle_tweets_8.csv  IRAhandle_tweets_9.csv
